<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">weather</string>
    <string name="skip_wait">跳过等待</string>
    <string name="city_manage">城市管理</string>
    <string name="city_manage_back">&#xe63d;</string>
    <string name="add_city_back">&#xe63d;</string>
    <string name="add_city_clean">&#xe65f;</string>
    <string name="add_city_input_hint">搜索国内城市或地名</string>
    <string name="city_manage_add_city_button">&#xe611;</string>
    <string name="weather_icon_qing">&#xe6f5;</string>
    <string name="weather_icon_duoyun">&#xe6f3;</string>
    <string name="weather_icon_yin">&#xe6f8;</string>
    <string name="weather_icon_feng">&#xe707;</string>
    <string name="weather_icon_zhenyu">&#xe6fb;</string>
    <string name="weather_icon_leizhenyu">&#xe6f4;</string>
    <string name="weather_icon_binbao">&#xe706;</string>
    <string name="weather_icon_xiaoyu">&#xe6f7;</string>
    <string name="weather_icon_zhongyu">&#xe6fd;</string>
    <string name="weather_icon_dayu">&#xe6f2;</string>
    <string name="weather_icon_yujiaxue">&#xe70a;</string>
    <string name="weather_icon_xiaoxue">&#xe6f6;</string>
    <string name="weather_icon_zhongxue">&#xe6fc;</string>
    <string name="weather_icon_daxue">&#xe6f1;</string>
    <string name="weather_icon_zhenxue">&#xe6fa;</string>
    <string name="weather_icon_wu">&#xe709;</string>
    <string name="weather_icon_mai">&#xe708;</string>
    <string name="weather_icon_qita">&#xe6fe;</string>
</resources>
