<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#F7F7F7"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/city_manage_title"
            android:layout_width="fill_parent"
            android:background="#47b2b8"
            android:layout_height="70dp">
        <TextView
                android:id="@+id/city_manage_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="18dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:textSize="20sp"
                android:text="@string/city_manage_back"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_toEndOf="@id/city_manage_back"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:textColor="#ffffff"
                android:text="@string/city_manage"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="70dp"
            android:background="#F7F7F7">
    </ListView>
    <Button
            android:id="@+id/city_manage_add_city_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/city_manage_add_city_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/shape_radius_25"/>
</RelativeLayout>