<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:background="#F7F7F7"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/add_city_title"
            android:layout_width="fill_parent"
            android:paddingTop="30dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="#47b2b8"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">
            <EditText
                    android:id="@+id/add_city_input"
                    android:layout_height="36dp"
                    android:layout_width="fill_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text=""
                    android:paddingStart="42dp"
                    android:hint="@string/add_city_input_hint"
                    android:paddingEnd="42dp"/>
            <TextView
                    android:id="@+id/add_city_back"
                    android:layout_width="40dp"
                    android:gravity="center"
                    android:layout_height="36dp"
                    android:textAlignment="center"
                    android:textColor="#555"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true"
                    android:text="@string/add_city_back"/>
            <TextView
                    android:id="@+id/add_city_clean"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:layout_width="40dp"
                    android:layout_alignParentEnd="true"
                    android:textSize="18sp"
                    android:visibility="invisible"
                    android:textColor="#555"
                    android:text="@string/add_city_clean"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/add_city_tips_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_below="@id/add_city_title"
            android:background="#F7F7F7">
        <TextView
                android:id="@+id/add_city_tips"
                android:textColor="#666666"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ListView
            android:id="@+id/add_city_list_view"
            android:visibility="visible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_city_title"
            android:divider="@android:color/transparent"
            android:background="#F7F7F7">
    </ListView>
</RelativeLayout>